fix: make the blue Guidlines responsive on small screens
We need the string escaping to prevent Less.js from trying to perform
the `min(` and `calc(` operations serverside (which does not make
sense).

See https://wikimedia.slack.com/archives/C06K74G4K0F/p1732726164708689
for context

Bug: T381613

--- a/resources/ext.communityConfiguration.Dashboard/Guidelines.less
+++ b/resources/ext.communityConfiguration.Dashboard/Guidelines.less
@@ -15,7 +15,7 @@
 	&__Guideline {
 		flex: 1;
 		padding: 0 @spacing-75 0 @spacing-75;
-		min-width: @dashboardCardWidth;
+		min-width: ~'min(calc(100% - 2rem), @{dashboardCardWidth})';
 		background-color: @background-color-progressive-subtle;
 		border-radius: @border-radius-base;
 	}
